# fastapi-project-post

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  main.py  mkdocs.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  markdown-link-config.json
app/core/: __init__.py  config.py  deps.py
app/core/db/: session.py
app/v1/model/: base_model.py  post_model.py  user_model.py
app/v1/router/: user_router.py
app/v1/schema/: base_schema.py  token_schema.py  user_schema.py
app/v1/scripts/: create_tables.py
app/v1/service/: auth_service.py  user_service.py
docs/: commands.md  components.md  contributing.md  env-vars.md  index.md  releasing.md  roadmap.md  testing.md  usage.md
docs/contribute/: github-flow.md
docs/examples/: common.md
provision/diagrams/docs/diagrams/: components.plantuml
provision/diagrams/static/: objective.plantuml
provision/docker-compose/: test.yml
provision/generators/: README.yaml
provision/generators/plop/: index.ts
provision/generators/plop/generators/: app.ts  entities.ts  index.ts
provision/generators/plop/templates/app/: model.add.hbs  router.add.hbs  schema.add.hbs  service.add.hbs
provision/generators/plop/utils/: helpers.ts  index.ts
provision/task/: docker-compose.yml
provision/templates/: README.tpl.md
testing/: validation.py
tests/: conftest.py  factories.py  test_factory.py
tests/db/: session.py
tests/fixtures/: api.py  core.py  db.py  factories.py
tests/functional/: test_user.py
tests/unit/: test_settings.py
tests/unit/models/: test_post.py  test_user.py
tests/unit/schemes/: test_user.py
tests/unit/services/: test_user.py
